--- a/index.html
+++ b/index.html
@@ -78,13 +78,41 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p>Hi I'm Claudio Gentile and I've been in this business for over 30 years. I've worked on thousands of projects, both residential and commerical. Kitchens, bathrooms, pools, restaurants, hotels, department stores, gyms- you name it, we've
+                <p>With a team of professional flooring specialists here at Claudio Tiles we take the needs of our customers VERY seriously. We've been in this business for over 30 years and worked on thousands of projects, both residential and commerical. Kitchens, bathrooms, pools, restaurants, hotels, department stores, gyms- you name it, we've
                     done it.
                     <br>
-                    <br> My work can be seen all over the tri-state area and even as far as Hawaii. With our tools and experience custom design work is no issue. Contact us today and let's get started!</p>
+                    <br>
+                    My work can be seen all over the tri-state area and even as far as Hawaii. With our tools and experience, custom design work is no issue. Contact us today for FREE estimate and let's get started!
+                    <br>
+                    <br>
+                </p>
             </div>
         </div>
+
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="item active">
+                <img class="d-block w-100" src="img/kitchen.jpg" alt="First slide">
+              </div>
+              <div class="item">
+                <img class="d-block w-100" src="img/bathroom.jpg" alt="Second slide">
+              </div>
+              <div class="item">
+                <img class="d-block w-100" src="img/shower.jpg" alt="Third slide">
+              </div>
+              <div class="item">
+                <img class="d-block w-100" src="img/fireplace.jpg" alt="Fourth slide">
+              </div>
+              <div class="item">
+                <img class="d-block w-100" src="img/backsplash.jpg" alt="Fifth slide">
+              </div>
+            </div>
+          </div>
     </section>
+    
+
+
+
     <!-- Footer -->
     <footer id="contact" class="text-center">
         <div class="footer-above">
