switch to Raddtech branding

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Claudio Tiles</title>
+    <title>RaddTech</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Theme CSS -->
@@ -37,7 +38,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Claudio Tiles</a>
+                <a class="navbar-brand" href="#page-top">RaddTech</a>
             </div>
             <!-- Collect the nav links, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -46,7 +47,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +61,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="logo">CLAUDIO TILES</span>
+                        <span class="logo"><img class='raddtech-logo'src='img/GoldLogoCircle.png'></span>
+                        <br>
+                        <span class="logo">RaddTech LLC</span>
                         <span class="name">Tile & Marble Installation</span>
                         <span class="skills">Tile - Marble - Granite - Stone - Porcelain</span>
                     </div>
@@ -78,7 +81,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p>With a team of professional flooring specialists here at Claudio Tiles we take the needs of our customers VERY seriously. We've been in this business for over 30 years and worked on thousands of projects, both residential and commerical. Kitchens, bathrooms, pools, restaurants, hotels, department stores, gyms- you name it, we've
+                <p>With a team of professional flooring specialists here we take the needs of our customers VERY seriously. We've been in this business for over 30 years and worked on thousands of projects, both residential and commerical. Kitchens, bathrooms, pools, restaurants, hotels, department stores, gyms- you name it, we've
                     done it.
                     <br>
                     <br>
@@ -122,15 +125,15 @@
                     <br>
                     <div class="footer-col col-md-4">
                         <h4>Location</h4>
-                        <p> North & Centrtal New Jersey Area</p>
+                        <a>123 Sample Address USA</a>
                     </div>
                     <div class="footer-col col-md-4">
                         <h4>Phone</h4>
-                        <a href="tel:2012807570">(201) 280-7570</a>
+                        <a href="#">(555) 555-5555</a>
                     </div>
                     <div class="footer-col col-md-4">
                         <h4>Email</h4>
-                        <a href="email:claudgent@gmail.com">claudgent@gmail.com</a>
+                        <a href="#">email@email.com</a>
                     </div>
                 </div>
             </div>
@@ -139,7 +142,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Claudio Gentile 2018
+                        Copyright &copy; RaddTech LLC 2019
                     </div>
                 </div>
             </div>
